Fixed issue with text alignment and stretched box in footer-logo div; added css class for centered-container which uses display : table-cell and text-align : middle to solve the alignment issue, which consequently solved the odd issue with the double-height div

--- a/2-css/public_html/css/main.css
+++ b/2-css/public_html/css/main.css
@@ -285,7 +285,7 @@
 	width: 1100px;
 	height: 100%;
 	padding: 16px 0;
-	background-color: red;
+	/*background-color: red;*/
 	margin: 0 auto;
 	display: table;
 	text-align: center;
@@ -294,14 +294,23 @@
 #footer-logo {
 	width: 200px;
 	height: 200px;
-	background-color: black;
+	/*background-color: black;*/
+	display: table;
+	float: left;
+}
+
+.centered-container {
 	display: table-cell;
+	vertical-align: middle;
 }
 
 #footer-logo p {
 	color: white;
-	margin: 0;
+	margin: auto;
 	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 28pt;
+	font-weight: bold;
 }
 
 #footer-links {
